fix bug for 数据源有英文，小写会被当成特殊字符

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -35,7 +35,7 @@
         <item>广西</item>
         <item>海南</item>
 
-
+        <item>A</item>
         <item>a</item>
         <item>b</item>
         <item>d</item>
