--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
 
     </android.support.v7.widget.RecyclerView>
 
-    <mcxtzhang.itemdecorationdemo.IndexBar.widget.IndexBar
+    <com.mcxtzhang.indexlib.IndexBar.widget.IndexBar
         android:id="@+id/indexBar"
         android:layout_width="24dp"
         android:layout_height="match_parent"
