高仿微信完成

--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:orientation="vertical"
-    android:paddingLeft="15dp">
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="70dp"
+              android:gravity="center_vertical"
+              android:orientation="horizontal"
+              android:paddingLeft="15dp">
+
+    <ImageView
+        android:id="@+id/ivAvatar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        tools:src="@drawable/friend"/>
 
     <TextView
         android:id="@+id/tvCity"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_vertical"
-        tools:text="安徽" />
+        android:paddingLeft="15dp"
+        tools:text="安徽"/>
 </LinearLayout>
