--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,8 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/white">
 
     </android.support.v7.widget.RecyclerView>
 
@@ -34,10 +35,10 @@
         tools:visibility="visible"/>
 
     <Button
-        android:onClick="updateDatas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:onClick="updateDatas"
         android:text="更新数据源"/>
 
 </FrameLayout>
